--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@astrojs/react": "^4.4.2",
     "@astrojs/sitemap": "^3.6.0",
+    "@radix-ui/react-hover-card": "^1.1.15",
     "@tabler/icons-react": "^3.36.0",
     "@tailwindcss/vite": "^4.1.18",
     "@types/react": "^19.2.7",
@@ -21,8 +22,10 @@
     "cobe": "^0.6.5",
     "lucide-react": "^0.562.0",
     "motion": "^12.23.26",
+    "qss": "^3.0.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-icons": "^5.5.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18"
   },
