--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "clsx": "^2.1.1",
     "cobe": "^0.6.5",
     "lucide-react": "^0.562.0",
+    "mini-svg-data-uri": "^1.4.4",
     "motion": "^12.23.26",
     "qss": "^3.0.0",
     "react": "^19.2.3",
