--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-icons": "^5.5.0",
+    "simplex-noise": "^4.0.3",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18"
   },
