--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "lint": "eslint \"src/**/*.{js,astro,ts,tsx,jsx}\""
   },
   "dependencies": {
     "@astrojs/mdx": "^4.3.13",
@@ -33,6 +34,11 @@
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
-    "tw-animate-css": "^1.4.0"
+    "@typescript-eslint/parser": "^8.51.0",
+    "eslint": "^9.39.2",
+    "eslint-plugin-astro": "^1.5.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "tw-animate-css": "^1.4.0",
+    "typescript-eslint": "^8.51.0"
   }
 }
