--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "lint": "eslint \"src/**/*.{js,astro,ts,tsx,jsx}\""
   },
   "dependencies": {
+    "@astrojs/markdoc": "^0.15.10",
     "@astrojs/mdx": "^4.3.13",
     "@astrojs/react": "^4.4.2",
     "@astrojs/sitemap": "^3.6.0",
+    "@keystatic/astro": "^5.0.6",
+    "@keystatic/core": "^0.5.48",
     "@radix-ui/react-hover-card": "^1.1.15",
     "@tabler/icons-react": "^3.36.0",
     "@tailwindcss/vite": "^4.1.18",
-    "@types/react": "^19.2.7",
+    "@types/react": "^19.2.8",
     "@types/react-dom": "^19.2.3",
     "astro": "^5.16.6",
     "class-variance-authority": "^0.7.1",
